--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,12 @@
 {
     "recommendations": [
         "pomdtr.excalidraw-editor",
-        "ms-python.python",
         "njpwerner.autodocstring",
         "kevinrose.vsc-python-indent",
-        "ms-python.black-formatter"
+        "ms-python.black-formatter",
+        "ms-python.vscode-pylance",
+        "ms-python.debugpy",
+        "donjayamanne.python-environment-manager",
+        "ms-python.isort"
     ]
 }
