--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Ignorar el archivo CSV generado por el notebook
+web_scraping/pokemon_dataset.csv
+
+# Ignorar la carpeta de imágenes generada por el script .py
+web_scraping/pokemon_images/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
