feat: añade dockerfile y programas básicos vacíos para el fetcher y rest_api
lo único que falta es el esqueleto del frontend,
y discutir que hacemos con el fetcher, ha quedado
algo raro.

--- a/src/Fetcher/Dockerfile
+++ b/src/Fetcher/Dockerfile
@@ -14,5 +14,7 @@ RUN pip install --no-cache-dir -r /requirements.txt
 # Expose the port the app runs on
 EXPOSE 8000
 
-# Run the application
-CMD ["fastapi", "run", "main.py"]
+# We will run this app like this, to run 2 programs in the container:
+# * 1 for scanning the database, and watching changes there or something
+# * the other, for running fastapi for fetching images from the internet as needed
+CMD ["sh", "/app/main.sh"]
