--- a/src/Frontend/Dockerfile
+++ b/src/Frontend/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3.9.20-alpine3.20
 
 COPY . /app
 
+COPY ../ORMSchema /app/ORMSchema
+
 # Set the working directory to /app
 WORKDIR /app
 
