--- a/src/app/Dockerfile
+++ b/src/app/Dockerfile
@@ -1,7 +1,8 @@
 # Use the official Python image from the Docker Hub
 FROM python:3.9.20-alpine3.20
 
-COPY . /app
+# Copy all files and directories from the current directory
+COPY . /app 
 
 COPY ../ORMSchema /app/ORMSchema
 COPY ../.env /app/.env
