--- a/src/app/requirements.txt
+++ b/src/app/requirements.txt
@@ -1,4 +1,6 @@
 Flask==3.1.0
 Flask-Login==0.6.3
-Flask-MySQLdb==2.0.0
 Flask-WTF==1.2.2
+SQLAlchemy==2.0.36
+python-dotenv==1.0.1
+cryptography==44.0.0
