--- a/src/Fetcher/Dockerfile
+++ b/src/Fetcher/Dockerfile
@@ -1,15 +1,15 @@
 # Use the official Python image from the Docker Hub
 FROM python:3.9.20-alpine3.20
 
-COPY . /app
+COPY Fetcher /app
 
-COPY ../ORMSchema /app/ORMSchema
-COPY ../.env /app/.env
+COPY ORMSchema /app/ORMSchema
+COPY .env /app/.env
 # Set the working directory to /app
 WORKDIR /app
 
 # Install the required packages
-COPY requirements.txt /requirements.txt
+COPY Fetcher/requirements.txt /requirements.txt
 
 RUN pip install --no-cache-dir -r /requirements.txt
 
