--- a/src/REST_API/Dockerfile
+++ b/src/REST_API/Dockerfile
@@ -3,13 +3,13 @@ FROM python:3.9.20-alpine3.20
 
 COPY . /app
 
-COPY ../ORMSchema /app/ORMSchema
-COPY ../.env /app/.env
+COPY ORMSchema /app/ORMSchema
+COPY .env /app/.env
 # Set the working directory to /app
 WORKDIR /app
 
 # Install the required packages
-COPY requirements.txt /requirements.txt
+COPY REST_API/requirements.txt /requirements.txt
 
 RUN pip install --no-cache-dir -r /requirements.txt
 
